# stl-containers

./: README.md
t01-matrices/: CMakeLists.txt  Makefile  main.cpp  matrices.cpp  matrices.hpp
t01-matrices/smoke_test/: 2  smoke_test.sh
t02-bignum/: CMakeLists.txt  bignum.hpp  smoke_test.cpp
t03-std-any/: CMakeLists.txt  smoke_test.cpp  whatever.hpp
t04-lazy-string/: lazy_string.cpp  lazy_string.hpp  shared_buffer.cpp  shared_buffer.hpp  test_lazy_string.cpp
t05-queue/: queue.hpp  test.cpp
t06-string-view/: string_view.cpp  string_view.hpp  test.cpp
t07-fold-expressions/: CMakeLists.txt
t07-fold-expressions/src/task_any_all/: any_all.hpp  test.cpp
t07-fold-expressions/src/task_for_each/: for_each.hpp
t07-fold-expressions/src/task_join/: join.hpp  test.cpp
t07-fold-expressions/src/task_tuple_utils/: test_at_many.cpp  test_transform_elements.cpp  tuple_utils.hpp
t08-unique-ptr/: test.cpp  unique_ptr.hpp
t09-std-optional/: maybe.hpp  smoke_test.cpp
